--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,90 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(197, 248, 248);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.newsclass{
+  width: 70%;
+  height: 50%;
+  
+}
+.rowClass{
+  object-fit: fit;
+  
+}
+.fontpae{
+  position: fixed;
+  top: 0;
+  background-image:url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fnews-background&psig=AOvVaw1t--spIkgiXF8xOMEEvROq&ust=1678196626278000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCLC61N-3x_0CFQAAAAAdAAAAABAE);
+width:100%;
+height:100vh;
+overflow: hidden;
+
+}
+.getstart{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: relative;
+  max-width: 100%;
+}
+.getstar{
+  background-color: rgb(0, 153, 255);
+  color: white;
+  border-radius: 10px;
+  width: 200px;
+  height: 60px;
+  font-size: 27px;
+  border: none;
+  margin-top: 30px;
+  position: relative;
+  text-align: center;
+  max-width: 100%;
+}
+nav{
+  position: fixed;
+  left:0;
+  
+  top:0;
+}
+@media screen and (max-width: 420px) {
+  .getstart{
+   padding-top:200px;
+    /* background-color: lightgreen; */
+    height: 20px;
+    font-size: small;
+    size: 10px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .image{
+    margin-left:5px;
+    margin-top:5px;
+     margin-bottom:5px;
+  }
+  .btn{
+    margin-left:17px;
+    color: red;
+  }
+}
+@media screen and (min-width: 420px) {
+  .image{
+    margin-left:300px;
+    margin-top:5px;
+     margin-bottom:5px;
+  }
+  .btn{
+    margin-left:525px;
+    color: red;
+    border:2px solid black;
+    background-color: rgb(223, 243, 204);
+  }
 }
